Removing HA pair

--- a/mysql.yaml
+++ b/mysql.yaml
@@ -15,19 +15,19 @@ Resources:
   ApiAccessPolicy:
     Type: OS::Heat::AccessPolicy
     Properties:
-      AllowedResources: [ MySQL0 ]
+      AllowedResources: [ MySQL ]
   ApiUser:
     Type: AWS::IAM::User
     Properties:
       Policies: [ { Ref: ApiAccessPolicy } ]
-  MySQL0:
+  MySQL:
     Type: AWS::EC2::Instance
     Metadata:
       OpenStack::ImageBuilder::Elements: [ mysql ]
       OpenStack::MySQL:
-        masterhandle: {Ref: MySQLMasterHandle}
-        keystone:
-          userhandle: {Ref: KeystonePasswordHandle}
+        databases:
+          keystone:
+            userhandle: {Ref: KeystonePasswordHandle}
       OpenStack::Heat::CFNTools:
         AWSAccessKeyId:
           Ref: ApiKey
@@ -38,34 +38,6 @@ Resources:
         {Ref: MySQLImage}
       InstanceType: {Ref: InstanceType}
       KeyName: {Ref: KeyName}
-  MySQL1:
-    Type: AWS::EC2::Instance
-    DependsOn: MySQL0
-    Metadata:
-      OpenStack::ImageBuilder::Elements: [ mysql ]
-      OpenStack::MySQL:
-        masterinfo: {Fn::GetAtt: [ MySQLMaster, Data ]}
-        consumers: {Ref: Consumers}
-        keystone:
-          userhandle: {Ref: KeystonePasswordHandle}
-      OpenStack::Heat::CFNTools:
-        AWSAccessKeyId:
-          Ref: ApiKey
-        AWSSecretAccessKey:
-          Fn::GetAtt: [ ApiKey, SecretAccessKey ]
-    Properties:
-      ImageId:
-        {Ref: MySQLImage}
-      InstanceType: {Ref: InstanceType}
-      KeyName: {Ref: KeyName}
-  MySQLMasterHandle:
-    Type: AWS::CloudFormation::WaitConditionHandle
-  MySQLMaster:
-    DependsOn: MySQL0
-    Type: AWS::CloudFormation::WaitCondition
-    Properties:
-      Handle: {Ref: MySQLMasterHandle}
-      Timeout: 60
   KeystonePasswordHandle:
     Type: AWS::CloudFormation:WaitConditionHandle
     Properties:
@@ -77,8 +49,6 @@ Resources:
       Timeout: 60
 Outputs:
     MySQLHost: 
-        Fn::GetAtt: [ MySQL0 , PrivateIp ]
-    MySQLSlaves:
-        Fn::GetAtt: [ MySQL1, PrivateIp ]
+        Fn::GetAtt: [ MySQL , PrivateIp ]
     KeystonePassword:
         Fn::GetAtt: [ KeystonePassword, Data ]
