use openstack-db

--- a/mysql.yaml
+++ b/mysql.yaml
@@ -23,7 +23,7 @@ Resources:
   MySQL:
     Type: AWS::EC2::Instance
     Metadata:
-      OpenStack::ImageBuilder::Elements: [ mysql ]
+      OpenStack::ImageBuilder::Elements: [ openstack-db ]
       OpenStack::MySQL:
         databases:
           keystone:
