Refactor a bit around new thinking

--- a/mysql.yaml
+++ b/mysql.yaml
@@ -11,6 +11,10 @@ Parameters:
     Default: m1.small
   MySQLImage:
     Type: String
+  KeystoneUser:
+    Description: Keystone database username.
+    Type: String
+    Default: keystone
 Resources:
   ApiAccessPolicy:
     Type: OS::Heat::AccessPolicy
@@ -24,15 +28,17 @@ Resources:
     Type: AWS::EC2::Instance
     Metadata:
       OpenStack::ImageBuilder::Elements: [ openstack-db ]
-      OpenStack::MySQL:
-        databases:
-          keystone:
-            userhandle: {Ref: KeystonePasswordHandle}
-      OpenStack::Heat::CFNTools:
-        AWSAccessKeyId:
-          Ref: ApiKey
-        AWSSecretAccessKey:
-          Fn::GetAtt: [ ApiKey, SecretAccessKey ]
+      OpenStack::Config:
+        mysql:
+          users:
+            - database: keystone
+              username: {Ref: KeystoneUser}
+              userhandle: {Ref: KeystonePasswordHandle}
+        heat:
+          AWSAccessKeyId:
+            Ref: ApiKey
+          AWSSecretAccessKey:
+            Fn::GetAtt: [ ApiKey, SecretAccessKey ]
     Properties:
       ImageId:
         {Ref: MySQLImage}
@@ -52,3 +58,4 @@ Outputs:
         Fn::GetAtt: [ MySQL , PrivateIp ]
     KeystonePassword:
         Fn::GetAtt: [ KeystonePassword, Data ]
+    KeystoneUser: {Ref: KeystoneUser}
