Adding bootstrap parameters

--- a/mysql.yaml
+++ b/mysql.yaml
@@ -15,6 +15,14 @@ Parameters:
     Description: Keystone database username.
     Type: String
     Default: keystone
+  BootstrapUrl:
+    Description: Fetch a mysql dump file from this URL and load it
+    Type: String
+    Default: ''
+  BootstrapUrl:
+    Description: Fetch a mysql config file from this URL to setup local root with bootstrapped database
+    Type: String
+    Default: ''
 Resources:
   ApiAccessPolicy:
     Type: OS::Heat::AccessPolicy
@@ -34,11 +42,18 @@ Resources:
             - database: keystone
               username: {Ref: KeystoneUser}
               userhandle: {Ref: KeystonePasswordHandle}
+          bootstrap_url: {Ref: BootstrapUrl}
+          root_cnf_url: {Ref: BootstrapRootCnfUrl}
         heat:
-          AWSAccessKeyId:
+          access_key_id:
             Ref: ApiKey
-          AWSSecretAccessKey:
+          secret_key:
             Fn::GetAtt: [ ApiKey, SecretAccessKey ]
+          stack:
+            name: {Ref: 'AWS::StackName'}
+            region: {Ref: 'AWS::Region'}
+          refresh:
+            - resource: MySQL
     Properties:
       ImageId:
         {Ref: MySQLImage}
@@ -48,7 +63,7 @@ Resources:
     Type: AWS::CloudFormation:WaitConditionHandle
     Properties:
   KeystonePassword:
-    DependsOn: MySQL1
+    DependsOn: MySQL
     Type: AWS::CloudFormation::WaitCondition
     Properties:
       Handle: {Ref: KeystonePasswordHandle}
