--- a/mysql.yaml
+++ b/mysql.yaml
@@ -8,7 +8,7 @@ Parameters:
   InstanceType:
     Description: Use this flavor
     Type: String
-    Default: m1.small
+    Default: bm.small
   MySQLImage:
     Type: String
   KeystoneUser:
@@ -19,7 +19,7 @@ Parameters:
     Description: Fetch a mysql dump file from this URL and load it
     Type: String
     Default: ''
-  BootstrapUrl:
+  BootstrapRootCnfUrl:
     Description: Fetch a mysql config file from this URL to setup local root with bootstrapped database
     Type: String
     Default: ''
@@ -32,10 +32,15 @@ Resources:
     Type: AWS::IAM::User
     Properties:
       Policies: [ { Ref: ApiAccessPolicy } ]
+  ApiKey:
+    Type: AWS::IAM::AccessKey
+    Properties:
+      UserName:
+        Ref: ApiUser
   MySQL:
     Type: AWS::EC2::Instance
     Metadata:
-      OpenStack::ImageBuilder::Elements: [ openstack-db ]
+      OpenStack::ImageBuilder::Elements: [ mysql ]
       OpenStack::Config:
         mysql:
           users:
@@ -59,9 +64,9 @@ Resources:
         {Ref: MySQLImage}
       InstanceType: {Ref: InstanceType}
       KeyName: {Ref: KeyName}
+      UserData: "#!/bin/bash\ntouch /tmp/userdata-finished\necho Userdata finished $(date)\n"
   KeystonePasswordHandle:
-    Type: AWS::CloudFormation:WaitConditionHandle
-    Properties:
+    Type: AWS::CloudFormation::WaitConditionHandle
   KeystonePassword:
     DependsOn: MySQL
     Type: AWS::CloudFormation::WaitCondition
