Refactoring to have a mysql-migration element.

--- a/mysql.yaml
+++ b/mysql.yaml
@@ -52,18 +52,19 @@ Resources:
   MySQL:
     Type: AWS::EC2::Instance
     Metadata:
-      OpenStack::ImageBuilder::Elements: [ mysql ]
+      OpenStack::ImageBuilder::Elements: [ mysql-migration ]
       OpenStack::Config:
         mysql:
+          create-users:
+            - database: keystone
+              username: {Ref: KeystoneUser}
+              userhandle: {Ref: KeystonePasswordHandle}
+        mysql-migration:
           users:
             root:
               password: {Ref: BootstrapRootPassword}
             dump:
               password: {Ref: BootstrapDumpPassword}
-          create-users:
-            - database: keystone
-              username: {Ref: KeystoneUser}
-              userhandle: {Ref: KeystonePasswordHandle}
           bootstrap_host: {Ref: BootstrapHost}
           slave_user: {Ref: BootstrapSlaveUser}
           slave_password: {Ref: BootstrapSlavePassword}
@@ -90,7 +91,7 @@ Resources:
     Type: AWS::CloudFormation::WaitCondition
     Properties:
       Handle: {Ref: KeystonePasswordHandle}
-      Timeout: 60
+      Timeout: 90
 Outputs:
     MySQLHost: 
         Fn::GetAtt: [ MySQL , PrivateIp ]
