Specify the usernames for dump/root explicitly

--- a/mysql.yaml
+++ b/mysql.yaml
@@ -62,8 +62,10 @@ Resources:
         mysql-migration:
           users:
             root:
+              username: root
               password: {Ref: BootstrapRootPassword}
             dump:
+              username: dump
               password: {Ref: BootstrapDumpPassword}
           bootstrap_host: {Ref: BootstrapHost}
           slave_user: {Ref: BootstrapSlaveUser}
