Add Heat and RabbitMQ to base stack.

--- a/base.yaml
+++ b/base.yaml
@@ -5,6 +5,16 @@ Parameters:
     Description: URL Base where all of our templates are available
     Type: String
 Resources:
+  RabbitMQ:
+    Type: AWS::CloudFormation::Stack
+    TemplateURL:
+      Fn::Join:
+        - {Ref: TemplateRoot}
+        - rabbitmq.yaml
+    Parameters:
+      InstanceType: m1.small
+      KeyName: default
+      RabbitMQImage: image-rabbitmq
   MySQL:
     Type: AWS::CloudFormation::Stack
     TemplateURL:
@@ -30,3 +40,18 @@ Resources:
           - '@'
           - {Fn::GetAtt: [ MySQL , MySQLHost ]}
           - '/keystone'
+  Heat:
+    Type: AWS::CloudFormation::Stack
+    TemplateURL:
+      Fn::Join:
+        - {Ref: TemplateRoot}
+        - heat.yaml
+    Parameters:
+      KeyName: default
+      HeatDSN:
+        Fn::Join:
+          - 'mysql://heat:'
+          - {Fn::GetAtt: [ MySQL, HeatPassword ] }
+          - '@'
+          - {Fn::GetAtt: [ MySQL, MySQLHost ]}
+          - '/heat'
