--- a/mysql.yaml
+++ b/mysql.yaml
@@ -13,6 +13,10 @@ Parameters:
     Description: Keystone database username.
     Type: String
     Default: keystone
+  HeatUser:
+    Description: Heat database username.
+    Type: String
+    Default: heat
   MySQLImage:
     Type: String
   BootstrapHost:
@@ -59,6 +63,9 @@ Resources:
             - database: keystone
               username: {Ref: KeystoneUser}
               userhandle: {Ref: KeystonePasswordHandle}
+            - database: heat
+              username: {Ref: HeatUser}
+              userhandle: {Ref: HeatPasswordHandle}
         mysql-migration:
           users:
             root:
@@ -85,6 +92,14 @@ Resources:
         {Ref: MySQLImage}
       InstanceType: {Ref: InstanceType}
       KeyName: {Ref: KeyName}
+  HeatPasswordHandle:
+    Type: AWS::CloudFormation::WaitConditionHandle
+  HeatPassword:
+    DependsOn: MySQL
+    Type: AWS::CloudFormation::WaitCondition
+    Properties:
+      Handle: {Ref: HeatPasswordHandle}
+      Timeout: 90
   KeystonePasswordHandle:
     Type: AWS::CloudFormation::WaitConditionHandle
   KeystonePassword:
@@ -99,3 +114,6 @@ Outputs:
     KeystonePassword:
         Fn::GetAtt: [ KeystonePassword, Data ]
     KeystoneUser: {Ref: KeystoneUser}
+    HeatPassword:
+        Fn::GetAtt: [ HeatPassword, Data ]
+    HeatUser: {Ref: HeatUser}
