Match Metadata with tripleo-image-elements.

--- a/base.yaml
+++ b/base.yaml
@@ -4,6 +4,9 @@ Parameters:
   TemplateRoot:
     Description: URL Base where all of our templates are available
     Type: String
+  KeystoneAdminToken:
+    Description: Admin Token needed for keystone
+    Type: String
 Resources:
   RabbitMQ:
     Type: AWS::CloudFormation::Stack
@@ -32,6 +35,7 @@ Resources:
         - {Ref: TemplateRoot}
         - keystone.yaml
     Parameters:
+      AdminToken: {Ref: KeystoneAdminToken}
       KeyName: default
       KeystoneDSN:
         Fn::Join:
