--- a/keystone.yaml
+++ b/keystone.yaml
@@ -14,6 +14,8 @@ Parameters:
     Type: String
   KeystoneImage:
     Type: String
+  AdminToken:
+    Type: String
 Resources:
   ApiAccessPolicy:
     Type: OS::Heat::AccessPolicy
@@ -36,15 +38,20 @@ Resources:
       InstanceType: {Ref: InstanceType}
       KeyName: {Ref: KeyName}
     Metadata:
-      OpenStack::Heat::CFNTools:
-        AWSAccessKeyId:
-          Ref: ApiKey
-        AWSSecretAccessKey:
-          Fn::GetAtt: [ ApiKey, SecretAccessKey ]
       OpenStack::ImageBuilder::Elements: [ keystone ]
-      OpenStack:
-        keystone:
-          db: {Ref: KeystoneDSN}
+      heat: 
+        access_key_id:
+          Ref: ApiKey
+        secret_key:
+          Fn::GetAtt: [ ApiKey, SecretAccessKey ]
+        stack:
+          name: {Ref: 'AWS::StackName'}
+          region: {Ref: 'AWS::Region'}
+        refresh:
+          - resource: Keystone
+      admin-token: {Ref: AdminToken}
+      keystone:
+        db: {Ref: KeystoneDSN}
   Keystone:
     Type: OS::Heat::InstanceGroup
     Properties:
