Fix yaml formatting

--- a/glance.yaml
+++ b/glance.yaml
@@ -25,7 +25,7 @@ Parameters:
 Resources:
   GlanceUser:
     Type: AWS::CloudFormation::Stack
-    TemplateURL: {Fn::Join: [ {Ref: TemplateURL} , 'generic-user.yaml' ]}
+    TemplateURL: {'Fn::Join': [ {Ref: TemplateURL} , 'generic-user.yaml' ]}
     Parameters:
       AccessList: [ Glance ]
   Glance:
