--- a/generic-user.yaml
+++ b/generic-user.yaml
@@ -2,7 +2,7 @@ HeatTemplateFormatVersion: '2012-12-12'
 Description: 'HEAT Template - Heat Engine and API'
 Parameters:
   AllowedResources:
-    Type: CommaDelimitedList
+    Type: List
 Resources:
   AccessPolicy:
     Type: OS::Heat::AccessPolicy
