Cannot use generic-user.yaml, copy/paste in

--- a/glance.yaml
+++ b/glance.yaml
@@ -22,12 +22,24 @@ Parameters:
   TemplateURL:
     Type: String
     Default: https://raw.github.com/openstack-ops/templates/master/
+  RabbitHost:
+    Type: String
+  RabbitPassword:
+    Type: String
 Resources:
-  GlanceUser:
-    Type: AWS::CloudFormation::Stack
-    TemplateURL: {'Fn::Join': [ {Ref: TemplateURL} , 'generic-user.yaml' ]}
-    Parameters:
-      AccessList: [ Glance ]
+  AccessPolicy:
+    Type: OS::Heat::AccessPolicy
+    Properties:
+      AllowedResources: [ Glance ]
+  User:
+    Type: AWS::IAM::User
+    Properties:
+      Policies: [ { Ref: AccessPolicy } ]
+  Key:
+    Type: AWS::IAM::AccessKey
+    Properties:
+      UserName:
+        Ref: User
   Glance:
     Type: AWS::EC2::Instance
     Properties:
@@ -39,9 +51,9 @@ Resources:
       OpenStack::ImageBuilder::Elements: [ glance ]
       heat: 
         access_key_id:
-          Fn::GetAtt: [ GlanceUser, AccessKeyId ]
+          Ref: Key
         secret_key:
-          Fn::GetAtt: [ GlanceUser, SecretAccessKey ]
+          Fn::GetAtt: [ Key, SecretAccessKey ]
         stack:
           name: {Ref: 'AWS::StackName'}
           region: {Ref: 'AWS::Region'}
