Fix swift Metadata section.

--- a/glance.yaml
+++ b/glance.yaml
@@ -67,5 +67,6 @@ Resources:
       rabbit:
         host: {Ref: RabbitHost}
         password: {Ref: RabbitPassword}
-      swift.store_user: ''
-      swift.store_key: ''
+      swift:
+        store_user: ''
+        store_key: ''
