Add glance to mysql and base.

--- a/base.yaml
+++ b/base.yaml
@@ -40,10 +40,25 @@ Resources:
       KeystoneDSN:
         Fn::Join:
           - 'mysql://keystone:'
-          - {Fn::GetAtt: [ MySQL , KeystonePassword ]}
+          - {"Fn::GetAtt": [ MySQL , KeystonePassword ]}
           - '@'
-          - {Fn::GetAtt: [ MySQL , MySQLHost ]}
+          - {"Fn::GetAtt": [ MySQL , MySQLHost ]}
           - '/keystone'
+  Glance:
+    Type: AWS::CloudFormation::Stack
+    TemplateURL:
+      Fn::Join:
+        - {Ref: TemplateRoot}
+        - glance.yaml
+    Parameters:
+      KeyName: default
+      HeatDSN:
+        Fn::Join:
+          - 'mysql://glance:'
+          - {"Fn::GetAtt": [ MySQL, GlancePassword ] }
+          - '@'
+          - {"Fn::GetAtt": [ MySQL, MySQLHost ]}
+          - '/glance'
   Heat:
     Type: AWS::CloudFormation::Stack
     TemplateURL:
@@ -55,7 +70,7 @@ Resources:
       HeatDSN:
         Fn::Join:
           - 'mysql://heat:'
-          - {Fn::GetAtt: [ MySQL, HeatPassword ] }
+          - {"Fn::GetAtt": [ MySQL, HeatPassword ] }
           - '@'
-          - {Fn::GetAtt: [ MySQL, MySQLHost ]}
+          - {"Fn::GetAtt": [ MySQL, MySQLHost ]}
           - '/heat'
