--- a/mysql.yaml
+++ b/mysql.yaml
@@ -17,6 +17,10 @@ Parameters:
     Description: Heat database username.
     Type: String
     Default: heat
+  GlanceUser:
+    Description: Glance database username.
+    Type: String
+    Default: heat
   MySQLImage:
     Type: String
   BootstrapHost:
@@ -65,6 +69,9 @@ Resources:
           - database: heat
             username: {Ref: HeatUser}
             userhandle: {Ref: HeatPasswordHandle}
+          - database: glance
+            username: {Ref: GlanceUser}
+            userhandle: {Ref: GlancePasswordHandle}
       mysql-migration:
         users:
           root:
@@ -91,6 +98,14 @@ Resources:
         {Ref: MySQLImage}
       InstanceType: {Ref: InstanceType}
       KeyName: {Ref: KeyName}
+  GlancePasswordHandle:
+    Type: AWS::CloudFormation::WaitConditionHandle
+  GlancePassword:
+    DependsOn: MySQL
+    Type: AWS::CloudFormation::WaitCondition
+    Properties:
+      Handle: {Ref: GlancePasswordHandle}
+      Timeout: 90
   HeatPasswordHandle:
     Type: AWS::CloudFormation::WaitConditionHandle
   HeatPassword:
@@ -116,3 +131,6 @@ Outputs:
     HeatPassword:
         Fn::GetAtt: [ HeatPassword, Data ]
     HeatUser: {Ref: HeatUser}
+    GlancePassword:
+        Fn::GetAtt: [ GlancePassword, Data ]
+    GlanceUser: {Ref: GlanceUser}
