Fixes for quantum template

--- a/quantum.yaml
+++ b/quantum.yaml
@@ -26,7 +26,7 @@ Parameters:
     Type: String
   RabbitPassword:
     Type: String
-  QuantuMInterfaces:
+  QuantumInterfaces:
     Type: String
     Default: eth0
 Resources:
@@ -67,6 +67,7 @@ Resources:
       quantum:
         ovs_db: {Ref: QuantumDSN}
       service-password: {Ref: ServicePassword}
+      admin-password: {Ref: ServicePassword}
       rabbit:
         host: {Ref: RabbitHost}
         password: {Ref: RabbitPassword}
