Splitting nova-api and nova-compute.

--- a/nova-compute.yaml
+++ b/nova-compute.yaml
@@ -1,5 +1,5 @@
 HeatTemplateFormatVersion: '2012-12-12'
-Description: 'HEAT Template - Nova'
+Description: 'HEAT Template - Nova Compute'
 Parameters:
   KeyName: 
     Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
@@ -29,11 +29,14 @@ Parameters:
   NovaInterfaces:
     Type: String
     Default: eth0
+  NovaComputeSize:
+    Type: Integer
+    Default: 1
 Resources:
   AccessPolicy:
     Type: OS::Heat::AccessPolicy
     Properties:
-      AllowedResources: [ Nova ]
+      AllowedResources: [ NovaCompute ]
   User:
     Type: AWS::IAM::User
     Properties:
@@ -43,15 +46,15 @@ Resources:
     Properties:
       UserName:
         Ref: User
-  Nova:
-    Type: AWS::EC2::Instance
+  NovaLaunch:
+    Type: AWS::AutoScaling::LaunchConfiguration
     Properties:
       ImageId:
         {Ref: NovaImage}
       InstanceType: {Ref: InstanceType}
       KeyName: {Ref: KeyName}
     Metadata:
-      OpenStack::ImageBuilder::Elements: [ nova ]
+      OpenStack::ImageBuilder::Elements: [ nova-compute ]
       heat: 
         access_key_id:
           Ref: Key
@@ -61,7 +64,7 @@ Resources:
           name: {Ref: 'AWS::StackName'}
           region: {Ref: 'AWS::Region'}
         refresh:
-          - resource: Nova
+          - resource: NovaCompute
       keystone:
         host: {Ref: KeystoneHost}
       nova:
@@ -78,3 +81,8 @@ Resources:
         store_key: ''
       interfaces:
         control: {Ref: NovaInterfaces}
+    NovaCompute:
+      Type: OS::Heat::InstanceGroup
+      Properties:
+        LaunchConfiguration: {Ref: NovaLaunch}
+        Size: {Ref: NovaComputeSize}
