Create a utility for merging templates.

--- a/rabbitmq.yaml
+++ b/rabbitmq.yaml
@@ -15,6 +15,7 @@ Resources:
   RabbitMQ:
     Type: AWS::EC2::Instance
     Metadata:
+      OpenStack::Role: stateful
       OpenStack::ImageBuilder::Elements: [ rabbitmq-server ]
       rabbitmq:
         password_handle: {Ref: RabbitMQPasswordHandle}
