Fix type-o in rabbitmq.yaml.

--- a/rabbitmq.yaml
+++ b/rabbitmq.yaml
@@ -12,7 +12,7 @@ Parameters:
   RabbitMQImage:
     Type: String
 Resources:
-  RabbbitMQ:
+  RabbitMQ:
     Type: AWS::EC2::Instance
     Metadata:
       OpenStack::ImageBuilder::Elements: [ rabbitmq-server ]
