Parameterise more settings for nova and quantum.
Change-Id: Ia35431302848666ad013adaeae1d06482cd3117a

--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -36,6 +36,14 @@ Parameters:
     Type: String
   QuantumDSN:
     Type: String
+  QuantumBridgeMappings:
+    Type: String
+  QuantumNetworkVLANRanges:
+    Type: String
+  QuantumNetworkType:
+    Type: String
+  QuantumEnableTunnelling:
+    Type: String
 Resources:
   AccessPolicy:
     Type: OS::Heat::AccessPolicy
@@ -83,10 +91,10 @@ Resources:
         ovs:
           local_ip:
             Fn::GetAtt: [ NovaCompute, PrivateIp ]
-          tenant_network_type: gre
-          network_vlan_ranges: ''
-          bridge_mappings: ''
-          enable_tunneling: 'True'
+          tenant_network_type: {Ref: QuantumNetworkType}
+          network_vlan_ranges: {Ref: QuantumNetworkVLANRanges}
+          bridge_mappings: {Ref: QuantumBridgeMappings}
+          enable_tunneling: {Ref: QuantumEnableTunnelling}
 
       service-password: {Ref: ServicePassword}
       admin-password: {Ref: ServicePassword}
