Fix default mysql usernames.
Username heat looks like it got copy and pasted.

Change-Id: I40666b8e80df7424e223b317ab4c9d6f614c43e6

--- a/mysql.yaml
+++ b/mysql.yaml
@@ -20,11 +20,11 @@ Parameters:
   GlanceUser:
     Description: Glance database username.
     Type: String
-    Default: heat
+    Default: glance
   NovaUser:
-    Description: Glance database username.
+    Description: Nova database username.
     Type: String
-    Default: heat
+    Default: nova
   MySQLImage:
     Type: String
   BootstrapHost:
