Remove references to Fn::GetAtt.
These were causing a Circular dependency error during the
creation of a stack.

Change-Id: Iccdf4a081f38aa3a5fe0e250b9e9382958a0f26e

--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -89,8 +89,7 @@ Resources:
         host: {Ref: QuantumHost}
         ovs_db: {Ref: QuantumDSN}
         ovs:
-          local_ip:
-            Fn::GetAtt: [ NovaCompute, PrivateIp ]
+          local_ip: 127.0.0.1
           tenant_network_type: {Ref: QuantumNetworkType}
           network_vlan_ranges: {Ref: QuantumNetworkVLANRanges}
           bridge_mappings: {Ref: QuantumBridgeMappings}
