Adding floatingip_start and floatingip_end to heat template.
These are needed by the quantum-network-node element

Change-Id: Ic89b7f25752778aa2145768152bbc6e634ea3e5f

--- a/bootstack-vm.yaml
+++ b/bootstack-vm.yaml
@@ -76,6 +76,8 @@ Resources:
         host: 127.0.0.1
       quantum:
         floatingip_range: 172.17.41.0/24
+        floatingip_start: 172.17.41.2
+        floatingip_end: 172.17.41.254
         host: 127.0.0.1
         metadata_proxy_shared_secret: unset
         ovs_db: mysql://quantum:unset@localhost/ovs_quantum?charset=utf8
