Remove reference to KeystoneLaunch
This resource was remove in
6504e6bd09b8b3b14ce56490ea3e17daf8cc0a93
"Simplify keystone into one instance."

Change-Id: Iea1502e4f00539abc4b8d04ea37e55c2133f7ae7

--- a/keystone.yaml
+++ b/keystone.yaml
@@ -20,7 +20,7 @@ Resources:
   ApiAccessPolicy:
     Type: OS::Heat::AccessPolicy
     Properties:
-      AllowedResources: [ KeystoneLaunch, Keystone ]
+      AllowedResources: [ Keystone ]
   ApiUser:
     Type: AWS::IAM::User
     Properties:
