Update nagios3.yaml to reflect changes to the postfix element.
Recent changes to the postfix element added new parameters so
the nagios3 template needed to updated to ensure postfix works
as expected.

Change-Id: I0a9eb8e0988470888f35adcc426ccd314f93b301
Authored-by: Chris Krelle <nobodycam@gmail.com>

--- a/nagios3.yaml
+++ b/nagios3.yaml
@@ -47,6 +47,18 @@ Parameters:
     Type: String
     Default: |
       -----  BEGIN PlaceHolder...
+  PostfixMailHostname:
+    Description: Hostname for postfix..
+    Type: String
+    Default: nagios3-nagios3
+  PostfixMailDomain:
+    Description: Top level domain for postfix.
+    Type: String
+    Default: novalocal
+  PostfixDelayWarningTime:
+    Description: Amount of time to Delay warnnings.
+    Type: String
+    Default: 4h
 Resources:
   nagios3:
     Metadata:
@@ -69,6 +81,13 @@ Resources:
           Ref: NovaOsTenantName
         initial_network_split_key:
           Ref: InitialIpSplitKey
+      postfix:
+        mailhostname:
+          Ref: PostfixMailHostname
+        maildomain:
+          Ref: PostfixMailDomain
+        delay_warning_time:
+          Ref: PostfixDelayWarningTime
     Type: AWS::EC2::Instance
     Properties:
       KeyName:
