Update undercloud-vm for new networking config.
It is currently broken due to mismatched config keys.

Change-Id: If3ce934730cb974af7bcd7c6b3134e499f4e2a0d

--- a/undercloud-vm.yaml
+++ b/undercloud-vm.yaml
@@ -96,20 +96,18 @@ Resources:
             ssh_host: 192.168.122.1
             type: virsh
       quantum:
-        floatingip_range: 172.17.41.0/24
-        floatingip_start: 172.17.41.2
-        floatingip_end: 172.17.41.254
         host: 127.0.0.1
-        metadata_proxy_shared_secret: unset
         ovs_db: mysql://quantum:unset@localhost/ovs_quantum?charset=utf8
         ovs:
+          dnsmasq_range: [192.0.2.25, 192.0.2.44]
           public_interface: eth0
           physical_bridge: br-ctlplane
           physical_network: ctlplane
           network_vlan_ranges: ctlplane
           bridge_mappings: ctlplane:br-ctlplane
-          fixed_range: 198.51.100.0/24
-          ovs_range: 198.51.100.0/24
+          fixed_range: 
+            start: 192.0.2.5
+            end: 192.0.2.24
           tenant_network_type: vlan
           enable_tunneling: 'False'
       rabbit:
