Update bootstack-vm to match undercloud.
Also add Makefile stanza to produce overcoud.yaml from bootstack-vm
and nova-compute-group. This should allow independent usage of
nova-compute-group without having to manually update overcloud.

Change-Id: Id2bd20596e6be887b55019fdad31e6b0f4762eb7

--- a/bootstack-vm.yaml
+++ b/bootstack-vm.yaml
@@ -4,13 +4,18 @@ HeatTemplateFormatVersion: '2012-12-12'
 Parameters:
   InstanceType:
     Default: baremetal
-    Description: Use this flavor
+    Description: Flavor to request when deploying.
     Type: String
   KeyName:
     Default: default
     Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
     Type: String
-  notcomputeImage:
+  Image:
+    Default: undercloud
+    Type: String
+  PowerUserName:
+    Default: stack
+    Description: What username to ssh to the virtual power host with.
     Type: String
 Resources:
   AccessPolicy:
@@ -31,7 +36,7 @@ Resources:
   notcompute:
     Metadata:
       OpenStack::Heat::Stack: {}
-      Openstack::ImageBuilder::Elements: [ boot-stack, heat-cfntools, quantum-network-node ]
+      Openstack::ImageBuilder::Elements: [ boot-stack, heat-cfntools, heat-localip, quantum-network-node ]
       admin-password: unset
       admin-token: unset
       controller-address: 0.0.0.0
@@ -41,16 +46,16 @@ Resources:
       db-password: unset
       glance:
         db: mysql://glance:unset@localhost/glance
-        host: 127.0.0.1
+        host: 0.0.0.0
       heat:
         admin_password: unset
         admin_tenant_name: service
         admin_user: heat
         auth_encryption_key: unset___________
         db: mysql://heat:unset@localhost/heat
-        heat_watch_server_url: http://127.0.0.1:8003
-        metadata_server_url: http://127.0.0.1:8000
-        waitcondition_server_url: http://127.0.0.1:8000/v1/waitcondition
+        heat_watch_server_url: http://0.0.0.0:8003
+        metadata_server_url: http://0.0.0.0:8000
+        waitcondition_server_url: http://0.0.0.0:8000/v1/waitcondition
         access_key_id:
           Ref: Key
         refresh:
@@ -68,31 +73,33 @@ Resources:
         control: eth2
       keystone:
         db: mysql://keystone:unset@localhost/keystone
-        host: 127.0.0.1
+        host: 0.0.0.0
       nova:
         compute_driver: libvirt.LibvirtDriver
         db: mysql://nova:unset@localhost/nova
-        host: 127.0.0.1
+        host: 0.0.0.0
       quantum:
-        floatingip_range: 172.17.41.0/24
-        floatingip_start: 172.17.41.2
-        floatingip_end: 172.17.41.254
-        host: 127.0.0.1
+        floatingip_end: 192.0.2.64
+        floatingip_range: 192.0.2.0/24
+        floatingip_start: 192.0.2.45
+        host: 0.0.0.0
         metadata_proxy_shared_secret: unset
         ovs_db: mysql://quantum:unset@localhost/ovs_quantum?charset=utf8
         ovs:
-          public_interface: eth2
-          fixed_range: 10.0.0.0/8
+          public_interface: eth0
+          fixed_range:
+            start: 10.0.0.2
+            end: 10.255.255.254
           tenant_network_type: gre
           enable_tunneling: 'True'
           local_ip: 0.0.0.0
       rabbit:
-        host: 127.0.0.1
+        host: 0.0.0.0
         password: guest
       service-password: unset
     Properties:
       ImageId:
-        Ref: notcomputeImage
+        Ref: Image
       InstanceType:
         Ref: InstanceType
       KeyName:
