--- a/nova-compute-group.yaml
+++ b/nova-compute-group.yaml
@@ -11,6 +11,7 @@ Parameters:
     Default: baremetal
   NovaImage:
     Type: String
+    Default: overcloud-compute
   KeystoneHost:
     Type: String
   ServicePassword:
