Update boot-stack vm image for overcloud use.
We now have an undercloud specific template, so we can use
bootstack-vm specifically for the overcloud control plane.

Change-Id: I06eb2b1d00e4d2211b632a06880aed51f01762ff

--- a/bootstack-vm.yaml
+++ b/bootstack-vm.yaml
@@ -11,7 +11,7 @@ Parameters:
     Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
     Type: String
   Image:
-    Default: undercloud
+    Default: overcloud-control
     Type: String
   PowerUserName:
     Default: stack
